# rdfsolve

./: .check-manifest-ignore  .cruft.json  .dockerignore  .env.example  .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  DOCKER.md  FRONTEND_INTEGRATION.md  LICENSE  MANIFEST.in  Makefile  README.md  _void.ttl  app.py  docker-compose.full.yml  docker-compose.pipeline.yml  docker-compose.yml  notes.md  pyproject.toml  pyproject.toml.rej  rdfsolve.db  test_graph_clause.py  test_prefix_extraction.py  tox.ini  void-wikipathway.ttl
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: README.md  generate-schema-notebooks-matrix.yml  generate-schema-notebooks.yml  make-notebooks.yml  pages.yml  python-publish.yml
data/: qlever.csv  sources.csv  sources.yaml  sources_all.yaml  sources_smaller.csv  sources_smaller_left.csv  sssom_sources.yaml
data/qlever_workdirs/: ports.json
docker/: Dockerfile  Dockerfile.mcp
docker/schemas/: aopwikirdf_schema.jsonld  iocb.ontology_schema.jsonld  pubchem.bioassay_schema.jsonld  pubchem.endpoint_schema.jsonld  pubchem.gene_schema.jsonld  pubchem.measuregroup_schema.jsonld  pubchem.taxonomy_schema.jsonld  wikipathways_schema.jsonld
docs/: MAKEFILE_README.md  app.js  architecture.md  coverage_visualization.js  d3_diagram_utils.js  index.html  index.md  instance_matcher_implementation.md  iri_resolver.js  ls_cloud.js  results.json  schema_diagram.js  style.css
docs/source/: api.rst  cli.rst  codegen.rst  compose.rst  conf.py  index.rst  inference.rst  installation.rst  instance_matcher.rst  iri.rst  mapping_models.rst  miner.rst  models.rst  parser.rst  query.rst  schema_models.rst  schema_utils.rst  semra_converter.rst  semra_source.rst  shapes.rst  sources.rst  sparql_helper.rst  sssom_importer.rst  tools.rst  uri.rst  usage.rst  utils.rst
notebooks/: 01_VoID_generator.ipynb  02-Network analyses.ipynb  02_RDFconfig.ipynb  04_shapes_network.ipynb  WikiPathways_void.ttl  cleaned_schema.yaml  example.ipynb  idsm_named_graphs.md  instance_to_class_report.ipynb  make_notebooks.py  mapping_analysis.ipynb  nanosafety_rdf_void.ttl  rdfconfig-network.ipynb  schema_entries_only.yaml  schema_graphs_clean.yaml  sources.csv  uniprot.ipynb  void-network.ipynb  wikipathways_void.ttl
notebooks/01_schema_extraction/: _schema_template.ipynb  affymetrix_schema.ipynb  aopwikirdf_schema.ipynb  apo_schema.ipynb  bgee_schema.ipynb  cellosaurus_schema.ipynb  chebi_schema.ipynb  chembl_schema.ipynb  clinicaltrials_schema.ipynb  compoundwiki_schema.ipynb  ctd_schema.ipynb  drugbank.drugs_schema.ipynb  drugbank_schema.ipynb  earthmetabolome_schema.ipynb  eco_schema.ipynb  goa_schema.ipynb  hamap_schema.ipynb  hgnc_schema.ipynb  homologene_schema.ipynb  hp_schema.ipynb  idsm.void_schema.ipynb  interpro_schema.ipynb  iocb.ontology_schema.ipynb  irefindex_schema.ipynb  isdb_schema.ipynb  jpost_schema.ipynb  kegg_schema.ipynb  lsr_schema.ipynb  medgen_schema.ipynb  mesh.heading_schema.ipynb  mesh_schema.ipynb  metanext_schema.ipynb  mgi_schema.ipynb  mona_schema.ipynb  nanosafetyrdf_schema.ipynb  ncbigene_schema.ipynb  ndc_schema.ipynb  omabrowser_schema.ipynb  omim_schema.ipynb  orthodb_schema.ipynb  (+49 more)
notebooks/02_pydantic_models/: _pydantic_template.ipynb  affymetrix_pydantic.ipynb  aopwikirdf_pydantic.ipynb  apo_pydantic.ipynb  bgee_pydantic.ipynb  cellosaurus_pydantic.ipynb  chebi_pydantic.ipynb  chembl_pydantic.ipynb  clinicaltrials_pydantic.ipynb  compoundwiki_pydantic.ipynb  ctd_pydantic.ipynb  drugbank.drugs_pydantic.ipynb  drugbank_pydantic.ipynb  earthmetabolome_pydantic.ipynb  eco_pydantic.ipynb  goa_pydantic.ipynb  hamap_pydantic.ipynb  hgnc_pydantic.ipynb  homologene_pydantic.ipynb  hp_pydantic.ipynb  idsm.void_pydantic.ipynb  interpro_pydantic.ipynb  iocb.ontology_pydantic.ipynb  irefindex_pydantic.ipynb  isdb_pydantic.ipynb  jpost_pydantic.ipynb  kegg_pydantic.ipynb  lsr_pydantic.ipynb  medgen_pydantic.ipynb  mesh.heading_pydantic.ipynb  mesh_pydantic.ipynb  metanext_pydantic.ipynb  mgi_pydantic.ipynb  mona_pydantic.ipynb  nanosafetyrdf_pydantic.ipynb  ncbigene_pydantic.ipynb  ndc_pydantic.ipynb  omabrowser_pydantic.ipynb  omim_pydantic.ipynb  orthodb_pydantic.ipynb  (+49 more)
notebooks/03_bioregistry_namespaces/: _namespace_template.ipynb  affymetrix_namespaces.ipynb  aopwikirdf_namespaces.ipynb  apo_namespaces.ipynb  bgee_namespaces.ipynb  cellosaurus_namespaces.ipynb  chebi_namespaces.ipynb  chembl_namespaces.ipynb  clinicaltrials_namespaces.ipynb  compoundwiki_namespaces.ipynb  ctd_namespaces.ipynb  drugbank.drugs_namespaces.ipynb  drugbank_namespaces.ipynb  earthmetabolome_namespaces.ipynb  eco_namespaces.ipynb  goa_namespaces.ipynb  hamap_namespaces.ipynb  hgnc_namespaces.ipynb  homologene_namespaces.ipynb  hp_namespaces.ipynb  isdb_namespaces.ipynb  (+68 more)
scripts/: README.md  _probe_jsonld.py  _slurm_common.sh  build_graphs.py  build_ontology_index.py  debug_compose.py  download_bgee.py  download_bio2rdf.py  download_rdfportal.py  download_uniprot.py  estimate_download_sizes.sh  generate_results_json.sh  merge_local_graphs.py  mine_all_sources.py  mine_local.py  nq_iri_fix.py  print_jsons.py  retry_discover_graphs.py  run_pipeline.sh  run_pipeline_hpc.sh  seed_bioregistry.py  seed_inferenced_mappings.py  seed_instance_mappings.py  seed_schemas.py  seed_schemas_parallel.sh  seed_semra_mappings.py  seed_sssom_mappings.py  slurm_aopwikirdf_test.sh  slurm_full_mappings.sh  slurm_full_pipeline_hpc.sh  slurm_local_mapping.sh  slurm_local_mining.sh  slurm_mappings_only.sh  slurm_mine_and_map.sh  slurm_mine_only_hpc.sh  slurm_remote_mapping.sh  slurm_remote_mining.sh  slurm_single_source.sh  test_endpoints.py
tests/: __init__.py  test_bioregistry_prefixes.py  test_class_derivation.py  test_class_derived_model.py  test_class_index.py  test_compose.py  test_coverage_analysis.py  test_frequency_count.py  test_mine_all.py  test_models.py  test_ontology.py  test_parser.py  test_pipeline.py  test_progress_monitoring.py  test_raw_extraction.py  test_shapes.py  test_sources.py  test_utils.py  test_version.py  test_web.py
(+1142 files in other folders)
