# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdfsolve"
version = "0.0.1-dev"
description = "Wraps several RDF schema solver tools"
readme = "README.md"
authors = [
    { name = "Javier Millán Acosta", email = "javier.millanacosta@maastrichtuniversity.nl" }
]
maintainers = [
    { name = "Javier Millán Acosta", email = "javier.millanacosta@maastrichtuniversity.nl" }
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    
    "Framework :: tox",
    
    "Framework :: Sphinx",
    "Natural Language :: English",
    "Programming Language :: Python",
   "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
]
keywords = [
    "snekpack", # please keep this keyword to credit the cookiecutter-snekpack template
    "cookiecutter",
    # TODO add your own free-text keywords
]

# License Information. This can be any valid SPDX identifiers that can be resolved
# with URLs like https://spdx.org/licenses/MIT
# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
license = { file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    # Core RDF processing
    "rdflib>=6.0.0", # RDF graph processing and parsing
    "sparqlwrapper>=2.0.0", # SPARQL endpoint communication
    
    # Data processing and analysis
    "pandas>=2.0.0", # DataFrame operations for analysis results
    "numpy", # Numerical operations (pandas dependency)
    #"bioregistry",
    "bioregistry @ git+https://github.com/biopragmatics/bioregistry@main", #Use latest, TODO replace with official release when available
    # Schema modeling
    "linkml>=1.9.1",
    "pyld",
    # Utility libraries
    "more_itertools", # missing from itertools in stdlib
    "tqdm", # progress bars
    "pyarrow==22.0.0", # Parquet support for DataFrames
    # CLI and web framework
    "click",
    "more_click",
    "flask", # web framework
    
    # Jupyter notebook support (for schema extraction workflows)
    "jupyter",
    "nbconvert", # Converting notebooks to HTML
    "ipykernel", # Jupyter kernel support
    
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
]
docs = [
    "sphinx>=8",
    "sphinx-rtd-theme>=3.0",
    "sphinx-click", 
    "sphinx-automodapi",
    "plotly>=5.0.0",  # Required by schema_utils module
    # Include if your project uses Pydantic:
    # "autodoc_pydantic",
    # To include LaTeX comments easily in your docs.
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
]
dev = [
    "ruff",
]
web = [
    "flask>=2.0",
]
notebooks = [
    # Additional packages for notebook development and analysis
    "matplotlib>=3.10.7", # Plotting and visualization
    "seaborn>=0.11.0", # Statistical visualization
    "plotly>=5.0.0", # Interactive plots (optional)
    "networkx>=2.8", # Network analysis
    "jupyterlab>=4.0.0", # Full Jupyter Lab environment
    "ipywidgets>=8.0.0", # Interactive widgets for notebooks
    "narwhals==2.11.0",
    "plotly==6.4.0"
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
[project.urls]
"Bug Tracker" = "https://github.com/jmillanacosta/rdfsolve/issues"
Homepage = "https://github.com/jmillanacosta/rdfsolve"
Repository = "https://github.com/jmillanacosta/rdfsolve.git"
Documentation = "https://rdfsolve.readthedocs.io"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# this implicitly sets `packages = ":find"`
where = ["src"]  # list of folders that contain the packages (["."] by default)

# See https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools.package-data]
"*" = ["*.*"]


[project.scripts]
rdfsolve = "rdfsolve.cli:main"


[tool.cruft]
skip = [
    "**/__init__.py",
    "tests/*"
]

# MyPy, see https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "rdfsolve.cli"
# Click decorators don't have type stubs, so disable decorator checks
disallow_untyped_decorators = false

# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
[tool.doc8]
max-line-length = 120

# Pytest, see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = [
    "rdfsolve",
]
omit = [
    "tests/*",
    "docs/*",
]

[tool.coverage.paths]
source = [
    "src/rdfsolve",
    ".tox/*/lib/python*/site-packages/rdfsolve",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "DOC", # pydoclint
    "B", # bugbear
    "S", # bandit
    "T20", # print
    "N", # pep8 naming
    "ERA", # eradicate commented out code
    "NPY", # numpy checks
    "RUF", # ruff rules
    "C4", # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
    "E203", # Black conflicts with the following
]

# See https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
# Ignore security issues in the version.py, which are inconsistent
"src/rdfsolve/version.py" = ["S603", "S607"]
# Ignore commented out code in Sphinx configuration file
"docs/source/conf.py" = ["ERA001"]
# Tests should use assert statements - this is pytest standard
"tests/*.py" = ["S101"]
"tests/**/*.py" = ["S101"]
# Notebooks have different standards - allow prints, exec, line length, bare except, missing docstrings, naming conventions, complexity, commented code, pickle usage, ambiguous unicode, quadratic list summation
"notebooks/**/*.ipynb" = ["T201", "S102", "E501", "E722", "D103", "D205", "N803", "N806", "N816", "C901", "B007", "ERA001", "S301", "RUF001", "RUF017"]
"notebooks/**/*.py" = ["T201", "D103", "C901", "B007", "D205"]
# Parser has legitimate complexity, security warnings, naming conventions for RDF namespaces, docstring formatting, long SPARQL queries, commented code, MD5 for hashing (not security)
"src/rdfsolve/parser.py" = ["C901", "S311", "S324", "E722", "B030", "N806", "D205", "E501", "ERA001", "D401", "B904"]
# SparqlHelper has legitimate complexity in _execute method, MD5 for query ID hashing (not security)
"src/rdfsolve/sparql_helper.py" = ["C901", "S324"]
# CLI needs to bind to all interfaces for server mode, exception chaining not needed for click.Abort
"src/rdfsolve/cli.py" = ["S104", "B904"]
# Schema utils has intentional bare except for type checking
"src/rdfsolve/schema_utils.py" = ["E722"]
# Utils needs timeout parameter but many endpoints don't support it
"src/rdfsolve/tools/utils.py" = ["S113"]
# Auto-generated Pydantic models from LinkML schema - ignore all style issues
"docs/data/**/*_pydantic_models.py" = ["D", "N", "E501"]
"tests/test_data/*_pydantic_models.py" = ["D", "N", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-third-party = [
    "tqdm",
]
known-first-party = [
    "rdfsolve",
    "tests",
]

[tool.ruff.format]
# see https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true

[tool.bumpversion]
current_version = "0.0.1-dev"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?(?:\\+(?P<build>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?"
serialize = [
    "{major}.{minor}.{patch}-{release}+{build}",
    "{major}.{minor}.{patch}+{build}",
    "{major}.{minor}.{patch}-{release}",
    "{major}.{minor}.{patch}",
]
commit = true
tag = false

[tool.bumpversion.parts.release]
optional_value = "production"
first_value = "dev"
values = [
    "dev",
    "production",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/rdfsolve/version.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"
